add array to store generated colors, add modal to show stored colors

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Gradient background</title>
+	<link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
@@ -14,13 +15,15 @@
 	<button class="random">Generate random background!</button>
 	<h2>Current CSS background</h2>
 	<h3 id="text"></h3>
-	<button id="open-modal-btn">Open Modal</button>
+	<button id="open-modal-btn">Open list of generated colors</button>
 
 	<div id="overlay"></div>
 
 	<div id="modal">
-	  <h3>This is a modal</h3>
-	  <h2 id="modal-text"></h2>
+	  <h2>Generated colors:</h2>
+	  <ul id="ul">
+
+	  </ul>
 	  <button id="close-modal-btn">Close Modal</button>
 	</div>
 	<script type="text/javascript" src="script.js"></script>
